Update author information in package.json

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "transactions"
     ],
     "author": {
-        "name": "copilot-swe-agent[bot]",
-        "email": "198982749+Copilot@users.noreply.github.com"
+        "name": "Jan Thiel",
+        "email": "jan@hive-it.de"
     },
     "repository": {
         "type": "git",
